--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click-plugins==1.1.1
 cligj==0.7.2
 colorama==0.4.6
 Django==4.2.9
+django-cors-headers==4.3.1
 django-filter==23.5
 django-leaflet==0.29.0
 djangorestframework==3.14.0
